Janrain Mobile SDK V5.0.1

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+v5.0.1
+- The Janrain SDK now has dependencies on OKHttp. Follow the steps in Eclipse_Import_Guide.md or IntelliJ_Import_Guide.md no add the necessary Jars to your project.
 v5.0.0
  - Updated SDK for Android 5.0 compatability
  - Fixed issue with Twitter login leading to blank screen
