--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,5 @@
+v6.0.1
+- Added missing credentials to sample app
 v6.0.0
 - IMPORTANT: This is the last release of this form of the Janrain Android Mobile Libraries.  Other than major bug fixes or compatibility updates no further implementations will be released.  A new Android Sample Application will be written using more modern Android tools and libraries.
 - The only IDE that this release supports and has been tested with is the Android Studio IDE.
