Android Mobile Libraries 7.0.0

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -5,6 +5,10 @@ v7.0.0
 - Added support for Native Authentication using the WeChat application
 - Updated sample applications as needed to implement new changes.
 - Updated SimpleDemoNative sample app to use Facebook SDK version 4.18.0 and Twitter SDK version 2.3.1
+
+v6.0.1
+- Added missing credentials to sample app
+
 v6.0.0
 - The only IDE that this release supports and has been tested with is the Android Studio IDE.
 - The Android Mobile Libraries have removed all inter-dependencies on the Google, Facebook, and Twitter SDK's and Libraries.  The SimpleDemoNative app has been created to demonstrate how to integrate native provider logon for these providers using their SDK's and Libraries.  NOTE:  Google Play/Sign-On libraries newer than version 8.1 are NOT supported.  Google has changed the oAuth access token provisioning as of version 8.3 and it is no longer compatible with Janrain's API's at the time of this release.  Janrain will be updating their API's to support Google's re-architecture in the future.
