--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,7 @@
+v7.0.4
+- Resolved notification issue where the user cancelled the OpenID AppAuth process by using the back button or closing the browser and the mobile libraries weren't notified.  NOTE:  This change requires adding an activity to your AndroidManifest.xml.  Please refer to the Docs/Upgrade_Guide.md for more assistance.
+- Added extra verification for null/empty engageAppUrl settings.
+- Updated sample applications to use the 0.5.1 version of the OpenID AppAuth Android libraries
 v7.0.3
 - OpenID AppAuth library activity and service connections are now bound to the activity from which the main Jump libraries are invoked from (MainActivity in the SimpleDemo application).
 - Removed JROpenIDAppAuthFragment.java class.
