--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,16 @@
+v7.0.5
+- Added code and examples to support the change password functionality of flow forms.  This includes a new method that allow the developer to build up a simple Map of flow form names and values and submit the form to any Janrain "oauth/" compatible endpoint.  This method does no validation that the submitted data is accurate for the flow form configuration.  All validation of the submitted data and error reporting will be done server-side.
+```
+public static CaptureApiConnection updateUserProfileWithFormFieldsProvided(Map<String, String> fieldMap,
+                                                                               String oauthEndpoint,
+                                                                               String captureFlowFormName,
+                                                                               String accessToken,
+                                                                               final CaptureApiRequestCallback handler)
+```
+- Improved LinkAccount click behavior in the sample apps.
+- Improved error message parsing in several areas.
+- Resolved Twitter cancel-return webview display bug.
+- Added code to avoid null pointer exceptions with certain Samsung browsers during the OpenID AppAuth process.
 v7.0.4
 - Resolved notification issue where the user cancelled the OpenID AppAuth process by using the back button or closing the browser and the mobile libraries weren't notified.  NOTE:  This change requires adding an activity to your AndroidManifest.xml.  Please refer to the Docs/Upgrade_Guide.md for more assistance.
 - Added extra verification for null/empty engageAppUrl settings.
