--- a/Samples/SimpleDemoNative/res/values/strings.xml
+++ b/Samples/SimpleDemoNative/res/values/strings.xml
@@ -14,5 +14,6 @@
 
     <!-- Facebook SDK https://developers.facebook.com/docs/android/getting-started -->
     <string name="facebook_app_id">773409502771506</string>
+    <string name="fb_login_protocol_scheme">fb773409502771506</string>
 
 </resources>
